# Map-My-Friends

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf.example
.gemini/: last_test_results.txt
backend/: Dockerfile  pyproject.toml
backend/api/: admin.py  models.py  serializers.py
backend/api/migrations/: 0001_initial.py  0002_person_birthday_person_city_person_country_and_more.py
backend/apps/people/: admin.py  models.py  serializers.py  views.py
backend/apps/people/migrations/: 0001_initial.py  0002_person_timezone.py  0003_person_pin_color_person_pin_emoji_and_more.py
backend/apps/stations/: admin.py  models.py  tests.py  views.py
backend/apps/stations/management/commands/: import_stations.py
backend/apps/stations/migrations/: 0002_alter_station_station_type.py  0003_alter_station_station_type.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_userprofile_birth_date_userprofile_phone_number.py  0003_userprofile_pin_color_userprofile_pin_emoji_and_more.py
backend/config/: settings.py  urls.py
backend/tests/: test_geocoding.py
frontend/: flutter_launcher_icons.yaml  pubspec.yaml
frontend/assets/GlassIcon.icon/: icon.json
frontend/assets/data/: stations.json
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/components/: map_controls.dart  map_settings_button.dart  map_settings_modal.dart  person_card.dart  (+1 more)
frontend/test/: map_controls_test.dart
(+50 files in other folders)
